Bug 62847 - filter: DOCX image hyperlink not imported.
Summary: filter: DOCX image hyperlink not imported.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
4.0.2.2 release
Hardware: Other All
: high normal
Assignee: Not Assigned
URL:
Whiteboard: confirmed:4.3.0.0alpha0+:OSX10.9 conf...
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-28 05:59 UTC by Yifan Jiang
Modified: 2017-03-20 05:13 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
test sample (147.75 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2013-03-28 05:59 UTC, Yifan Jiang
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yifan Jiang 2013-03-28 05:59:59 UTC
Created attachment 77142 [details]
test sample

Platform: All
Build:    LO 4.1 master

Steps
-----

    1. Open the attached document with LO

Problem
-------

    The image had a hyperlink to "http://www.economist.com", however
    it looks not imported.

    Click "Ctrl" and hover the mouse to the image will change nothing.
    
    
Extra Info
----------

    * Seems not a regression but I suppose it is a frequent used feature
Comment 1 Yifan Jiang 2013-03-28 06:22:46 UTC
cc Miklos for reference :)
Comment 2 Jorendc 2013-04-08 15:51:20 UTC
Hi Yifan,

Thanks for reporting. I can reproduce this behavior using Linux Mint 14 x64 with LibreOffice Versie 4.0.2.2 .2.2 (Bouw-id: 4c82dcdd6efcd48b1d8bba66bfe1989deee49c3); Dutch UI; and Libreoffice Version: 4.1.0.0.alpha0+ Build ID: 7b515a57eb6a644860715018656ac0b843b62ba (build today).

Therefore I mark this as NEW.

@Yifan: I think you have also a non-master version installed on your system which you can reproduce this behavior? The bug report should always be reported against the oldest reproducible version (in this case it could be inherit from AOo off course). Therefore I mark this bug as a bug of LibreOffice 4.0.2.2 for now. Feel free to decrease that number if you still can reproduce this behavior using an earlier version.

Priority:
*Medium: does prevent you to make high quality work
*High: a bit higher then default value medium.

Kind regards,
Joren
Comment 3 retired 2013-12-16 10:14:49 UTC
Confirming with 4.1.3.2 and 4.3a0+ on os x 10.9. Adding whiteboard status.
Comment 4 Viktor 2014-12-17 01:34:23 UTC
This bug cost me a month of my sad and miserable life.
I used docx files for my resumes (cv). Have been sending these files for a month, responding to really a lot of vacancies... And not a single reply! I already thought I am so very bad nobody wants me. Untill today, when I accidentally found out there's no bloody hyperlinks! 
I am very, very upset. And angry. It's almost 4 in the morning and I swear I will follow this bug report, watching the status every day, untill I see nobody else loses month of their life because of this little nasty insect.
Version: 4.2.4.2
ID: 420m0(Build:2)
OS: Ubuntu 14.04
Comment 5 Xisco Faulí 2015-08-25 15:48:33 UTC
Problem still present in

Version: 5.0.0.5
Build ID: 1b1a90865e348b492231e1c451437d7a15bb262b
Locale: es-ES (es_ES)

on Windows 7 (64-bit)
Comment 6 Julien Nabet 2016-05-27 11:25:41 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce this.
I noticed these on console:
warn:writerfilter:25559:1:writerfilter/source/dmapper/DomainMapper_Impl.cxx:556: no context of type 1 available
warn:writerfilter:25559:1:writerfilter/source/dmapper/DomainMapper_Impl.cxx:556: no context of type 1 available
warn:oox:25559:1:oox/source/drawingml/shapecontext.cxx:126: ShapeContext::onCreateContext: unhandled element: 3972
warn:legacy.osl:25559:1:oox/source/helper/storagebase.cxx:67: StorageBase::StorageBase - missing base input stream
Comment 7 Commit Notification 2016-09-02 14:59:46 UTC
drazil committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8e375369206606c541cff5f46ea6a87db2c808b4

tdf#62847 import image hyperlink in docx

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 vihsa 2017-03-20 05:13:52 UTC
verified.
Version: 5.4.0.0.alpha0+ / Build ID: febc116 / ls-4001 / android 5.1

tapping the image redirects me to economist website on fennec.