writerfilter/source/ooxml/Handler.cxx
@@ -368,6 +368,37 @@ void OOXMLHyperlinkHandler::sprm(Sprm & /*rSprm*/)
 {
 }
 
+/**
+   class OOXMLHyperlinkURLHandler
+ */
+
+OOXMLHyperlinkURLHandler::OOXMLHyperlinkURLHandler(OOXMLFastContextHandler * pContext)
+: mpFastContext(pContext)
+{
+}
+
+OOXMLHyperlinkURLHandler::~OOXMLHyperlinkURLHandler()
+{
+    mpFastContext->clearProps();
+    mpFastContext->newProperty(NS_ooxml::LN_CT_Hyperlink_URL, OOXMLValue::Pointer_t(new OOXMLStringValue(mURL)));
+}
+
+void OOXMLHyperlinkURLHandler::attribute(Id name, Value & val)
+{
+    switch (name)
+    {
+    case NS_ooxml::LN_CT_Hyperlink_URL:
+        mURL = mpFastContext->getTargetForId(val.getString());
+        break;
+    default:
+        break;
+    }
+}
+
+void OOXMLHyperlinkURLHandler::sprm(Sprm & /*rSprm*/)
+{
+}
+
 }}
 
 /* vim:set shiftwidth=4 softtabstop=4 expandtab: */
