writerfilter/source/ooxml/Handler.hxx
@@ -144,6 +144,19 @@ public:
     virtual void sprm(Sprm & sprm) override;
 };
 
+class OOXMLHyperlinkURLHandler : public Properties
+{
+    OOXMLFastContextHandler * mpFastContext;
+    OUString mURL;
+
+public:
+    explicit OOXMLHyperlinkURLHandler(OOXMLFastContextHandler * pContext);
+    virtual ~OOXMLHyperlinkURLHandler();
+
+    virtual void attribute(Id name, Value & val) override;
+    virtual void sprm(Sprm & sprm) override;
+};
+
 
 }}
 #endif // INCLUDED_WRITERFILTER_SOURCE_OOXML_HANDLER_HXX
